--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,9 @@ body{
 
 /* header */
 header .navbar {
-    background-color: transparent !important;
+    background-color: transparent;
+    padding-left:2rem;
+    padding-right: 2rem;
 }
 
 /* main */
