footer, typeform no funcional, mediaquery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,22 @@ body {
 .card{
     background-color: #33bfcc;
     color: #fff;
+    border: #fff solid 1px;
 }
 
+.card-img-top{
+    object-fit: cover;
+    height: 10rem;
+}
+
+.footer-brand{
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+#show-sm{
+    display: none;
+}
 
 
 /* media querys */
@@ -48,8 +62,14 @@ body {
         display:none;
     }
 
+    #hide-sm{
+        display: none;
+    }
 
-    
+    #show-sm{
+        display:block;
+    }
+
 }
 
 @media (max-width: 991.98px) {
